@@ -2,7 +2,7 @@
 #' 
 #' Global afex options are used, for example, by \code{\link{aov_car}} (et al.) and \code{\link{mixed}}. But can be changed in each functions directly using an argument (which has precedence over the global options).
 #' 
-#' @param ... One of three: (1) nothing, then returns all options; (2) a name of an option element, then returns its' value; (3) a name-value pair which sets the corresponding option to the new value (and returns nothing).
+#' @param ... One of four: (1) nothing, then returns all options as a list; (2) a name of an option element, then returns its' value; (3) a name-value pair which sets the corresponding option to the new value (and returns nothing), (4) a list with option-value pairs which sets all the corresponding arguments. The example show all possible cases.
 #' 
 #' @details The following arguments are currently set:
 #' \itemize{
@@ -15,33 +15,49 @@
 #' \item \code{factorize}: Should between subject factors be factorized (with note) before running the analysis? Default is \code{TRUE}. (ANOVA functions only)
 #' }
 #' 
+#' @note All options are saved in the global R \code{\link{options}} with prefix \code{afex.}.
+#' 
 #' @return depends on input, see above.
 #'
-#' @examples
-#' afex_options()
-#' 
-#' afex_options("return_aov")
-#' 
-#' afex_options("return_aov", "check.contrasts")  # returns only first value!
-#' 
-#' \dontrun{
-#' afex_options(return_aov = "nice")
-#' }
-#' 
-#' @importFrom utils ls.str
+#' @example examples/examples.helpers.R
 #' 
 #' @export
 
-afex_options <- function(...)
-{
+# afex_options <- function(...)
+# {
+#   dots <- list(...)
+#   if (length(dots) == 0) return(ls.str(envir = .afexEnv))
+#   else {
+#     if (!is.null(names(dots))) {
+#       if (length(dots) > 1) stop("afex_options can only return a single element.")
+#       for (i in seq_along(dots)) {
+#         assign(names(dots)[i], dots[[i]], envir = .afexEnv)
+#       }
+#     } else return(get(dots[[1]], envir = .afexEnv))
+#   }
+# }
+
+afex_options <- function(...) {
   dots <- list(...)
-  if (length(dots) == 0) return(ls.str(envir = .afexEnv))
-  else {
-    if (!is.null(names(dots))) {
-      if (length(dots) > 1) stop("afex_options can only return a single element.")
-      for (i in seq_along(dots)) {
-        assign(names(dots)[i], dots[[i]], envir = .afexEnv)
-      }
-    } else return(get(dots[[1]], envir = .afexEnv))
+  #browser()
+  if (length(dots) == 0) {  # branch to get all afex options
+    op <- options()
+    afex_op <- op[str_detect(names(op), "^afex.")]
+    names(afex_op) <- str_replace(names(afex_op), "^afex.", "")
+    return(afex_op)
+  } else if (is.list(dots[[1]])) {  # set several afex options as a list:
+    newop <- dots[[1]]
+    names(newop) <- str_c("afex.", names(newop))
+    options(newop)
+  } else if (!is.null(names(dots))) {
+    newop <- dots
+    names(newop) <- str_c("afex.", names(newop))
+    options(newop)
+  } else if (is.null(names(dots))) {  # get a single afex options
+    if (length(dots) > 1) stop("afex_options() can only return the value of a single option.", call. = FALSE)
+    return(getOption(str_c("afex.", unlist(dots))))
+  } else {
+    warning("Unsopported command to afex_options(), nothing done.", call. = FALSE)
   }
 }
+
